--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
         <!-- リンク項目 -->
         <div class="space-y-4">
-            <a href="#" class="block w-full py-4 px-6 bg-white border border-gray-100 rounded-2xl shadow-sm hover:shadow-md hover:-translate-y-0.5 transition-all duration-200 text-gray-800 font-semibold tracking-wider">
-                リンク項目 1
+            <a href="My-Periodic-Table/My-Periodic-Table.html" class="block w-full py-4 px-6 bg-white border border-gray-100 rounded-2xl shadow-sm hover:shadow-md hover:-translate-y-0.5 transition-all duration-200 text-gray-800 font-semibold tracking-wider">
+                元素図鑑 My Edition
             </a>
             <a href="#" class="block w-full py-4 px-6 bg-white border border-gray-100 rounded-2xl shadow-sm hover:shadow-md hover:-translate-y-0.5 transition-all duration-200 text-gray-800 font-semibold tracking-wider">
                 リンク項目 2
@@ -79,4 +79,5 @@
         };
     </script>
 </body>
+
 </html>
