--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <a href="temperature and humidity/temperature and humidity.html" class="block w-full py-4 px-6 bg-white border border-gray-100 rounded-2xl shadow-sm hover:shadow-md hover:-translate-y-0.5 transition-all duration-200 text-gray-800 font-semibold tracking-wider">
                 温湿度コンシェルジュ
             </a>
-            <a href="#" class="block w-full py-4 px-6 bg-white border border-gray-100 rounded-2xl shadow-sm hover:shadow-md hover:-translate-y-0.5 transition-all duration-200 text-gray-800 font-semibold tracking-wider">
-                まだ
+            <a href="band_checker/band_checker.html" class="block w-full py-4 px-6 bg-white border border-gray-100 rounded-2xl shadow-sm hover:shadow-md hover:-translate-y-0.5 transition-all duration-200 text-gray-800 font-semibold tracking-wider">
+                キャリアバンドチェッカー
             </a>
         </div>
     </div>
@@ -81,5 +81,6 @@
 </body>
 
 </html>
+
 
 
