band_checker.html を更新

--- a/band_checker/band_checker.html
+++ b/band_checker/band_checker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>日本キャリア バンド対応チェッカー</title>
+    <title>キャリアバンド対応チェッカー</title>
     <!-- PWA Settings -->
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#2563eb">
