band_checker.html を更新

--- a/band_checker/band_checker.html
+++ b/band_checker/band_checker.html
@@ -19,7 +19,7 @@
 <body class="bg-slate-50 min-h-screen p-4 md:p-8 font-sans text-slate-900">
     <div class="max-w-4xl mx-auto">
         <header class="mb-8 text-center">
-            <h1 class="text-3xl font-bold text-slate-800 mb-2">日本キャリア バンド対応チェッカー</h1>
+            <h1 class="text-3xl font-bold text-slate-800 mb-2">キャリアバンド対応チェッカー</h1>
             <p class="text-slate-600">スペック表のバンド表記（B1/B3/n77など）をそのまま貼り付けて確認できます</p>
         </header>
 
